<resources>


    <!--    App Constants-->
    <string name="app_name">Slate</string>
    <string name="login">login</string>
    <string name="log_out">Log Out</string>
    <string name="conf_log_out">Confirm Log Out</string>
    <string name="delete">Delete</string>
    <string name="conf_delete">Confirm Delete</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="note_here">Your note here…</string>
    <string name="title">Title</string>
    <string name="bg">BG</string>
    <string name="select_bg_color">Select Background Color</string>


    <!--    Useless things but useful things-->
    <string name="start_journey">Start Your Journey</string>
    <string name="log_in_sign_up">Log in / Sign up to your account.</string>
    <string name="useless_thought_1">Dive in! Scribble your first thought and take the plunge.</string>


    <!--    useful things-->
    <string name="all_notes">All Notes</string>
    <string name="your_acc">Your Account</string>
    <string name="username_rule">*Username should not exceed 12 characters</string>
    <string name="note_title_rule">*Title should not exceed 100 characters</string>
    <string name="you_sure">Are you sure about that?</string>


    <!--    Toasts-->
    <string name="succ_chnged_usrnm">Successfully changed username</string>
    <string name="succ_updtd_note">Successfully updated note</string>
    <string name="fild_cnnt_empty">Both fields cannot be empty</string>
    <string name="invld_usnrm">Invalid Username</string>


    <!--    Urls-->
    <string name="client_id" translatable="false">558370176302-qq8vbfvuosgsnvak1e84mp41t6v0egb7.apps.googleusercontent.com</string>
    <string name="database_url" translatable="false">https://slate-ae34b-default-rtdb.asia-southeast1.firebasedatabase.app/</string>



</resources>